--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,8 @@ h6 {
 .icon-menu {
   display: block;
   position: relative;
-  width: 1.125rem;
-  height: .75rem;
+  width: 1.5rem;
+  height: .875rem;
   z-index: 5
 }
 .icon-menu span,
@@ -354,7 +354,7 @@ h6 {
   transform: scaleX(1)
 }
 .hero {
-  background-image: url(../img/hero/hero.webp);
+  background-image: url(../img/hero/hero.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -416,7 +416,7 @@ h6 {
   margin-top: .125rem
 }
 .hero {
-  background-image: url(../img/hero/hero.webp);
+  background-image: url(../img/hero/hero.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -622,7 +622,7 @@ h6 {
   transform: scaleX(1)
 }
 .expert {
-  background-image: url(../img/expert/background.webp);
+  background-image: url(../img/expert/background.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -699,7 +699,7 @@ h6 {
   transition: all .3s
 }
 .services {
-  background-image: url(../img/services/services.webp);
+  background-image: url(../img/services/services.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
